# journal-scraper

./: README.md  pyproject.toml  selenium.ipynb
journal_scraper/: api.py  cache.py  cli.py  converters.py  epmc.py  ncbi.py  runner.py  selenium_cls.py  soup.py  tellurium.py  utils.py  xml_utils.py
