[project]
name = "journal-scraper"
version = "0.1.1"
description = "Scraping Scientific Journal Articles"
authors = [{ name = "arabidopsis", email = "ian.castleden@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "click>=8.1.8,<9",
    "requests>=2.32.3,<3",
    "lxml>=5.4.0,<6",
    "beautifulsoup4>=4.13.0,<5",
    "html-to-markdown>=1.3.2,<2",
    "tqdm>=4.67.1,<5",
]

[project.optional-dependencies]
all = [
    "selenium>=4.32.0,<5",
    "undetected-chromedriver>=3.5.5,<4",
    "selenium-stealth>=1.0.6,<2",
]

[project.scripts]
biolit = "journal_scraper.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
